--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
-images/
-py/download_from_flickr.py
-py/*.ipynb
-py/.ipynb_checkpoints
-py/*.npy
-py/*.h5
-py/test_image
-py/__pycache__
-py/uploads
+.vscode/
+
+flask/images/
+flask/py/download_from_flickr.py
+flask/py/*.ipynb
+flask/py/.ipynb_checkpoints
+flask/py/*.npy
+flask/py/*.h5
+flask/py/test_image
+flask/py/__pflask/ycache__
+flask/py/uploads
+
+Django/images/
+Django/py/download_images.py
+Django/py/*.npy
+Django/py/*.h5
